# pdfEditor_wasm_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.js  index.html  ocr_worker.js  package.json  pdf_processor.cpp  pdf_processor.js  pdf_processor.wasm  pdf_tools.js  pdfium_worker.js
backend/: .env.example  manage.py  requirements.txt
backend/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/jobs/migrations/: 0001_initial.py  0002_alter_processedpdfjob_operation_type.py
backend/pdf_backend/: asgi.py  settings.py  urls.py  wsgi.py
